--- a/.travis.yml
+++ b/.travis.yml
@@ -85,7 +85,10 @@ before_script:
   - cd ~/catkin_ws
   - rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
 
-
+ignore:
+  - *.md
+  - path/to/ignorable/*
+  - Tools/
 # Do static code analysis with coverity
 addons:
   coverity_scan:
@@ -112,3 +115,4 @@ script:
   # Run the tests, ensuring the path is set correctly.
   - source devel/setup.bash
   - catkin_make run_tests && catkin_test_results
+  
